--- a/pages/super-admin/add_memberships.html
+++ b/pages/super-admin/add_memberships.html
@@ -75,8 +75,8 @@
                       <div class="card  card-img-holder ">
                         <div class="card-body mini-marg">
                           <img src="\assets/images/faces/member-card.png" alt="image" />
-                          <h5 class="mt-3"><span class="fontbackg">TAG</span></h5>
-                          <h5>Membership name</h5>
+                          <!-- <h5 class="mt-3"><span class="fontbackg">TAG</span></h5> -->
+                          <h5 class="mt-3">Membership (Challenge Female Gym 4 days)</h5>
                           <div class="progress">
                             <div class="progress-bar bg-success" role="progressbar" style="width: 58%"
                               aria-valuenow="58" aria-valuemin="0" aria-valuemax="100"></div>
@@ -101,63 +101,8 @@
                       <div class="card  card-img-holder ">
                         <div class="card-body mini-marg">
                           <img src="\assets/images/faces/member-card.png" alt="image" />
-                          <h5 class="mt-3"><span class="fontbackg">TAG</span></h5>
-                          <h5>Membership name</h5>
-                          <div class="progress">
-                            <div class="progress-bar bg-success" role="progressbar" style="width: 58%"
-                              aria-valuenow="58" aria-valuemin="0" aria-valuemax="100"></div>
-                          </div><br>
-                          <div class="description">
-                            <div class="row">
-                              <div class="col-md-4">
-                                <p class="txt2">5 Programs</p>
-                              </div>
-                              <div class="col-md-4">
-                                <p class="txt2">17 Workouts</p>
-                              </div>
-                              <div class="col-md-4">
-                                <p class="txt2">331 Users</p>
-                              </div>
-                            </div>
-                          </div>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-
-                  <div class="row">
-                    <div class="col-md-6 stretch-card grid-margin">
-                      <div class="card  card-img-holder ">
-                        <div class="card-body mini-marg">
-                          <img src="\assets/images/faces/member-card.png" alt="image" />
-                          <h5 class="mt-3"><span class="fontbackg">TAG</span></h5>
-                          <h5>Membership name</h5>
-                          <div class="progress">
-                            <div class="progress-bar bg-success" role="progressbar" style="width: 58%"
-                              aria-valuenow="58" aria-valuemin="0" aria-valuemax="100"></div>
-                          </div><br>
-                          <div class="description">
-                            <div class="row">
-                              <div class="col-md-4">
-                                <p class="txt2">5 Programs</p>
-                              </div>
-                              <div class="col-md-4">
-                                <p class="txt2">17 Workouts</p>
-                              </div>
-                              <div class="col-md-4">
-                                <p class="txt2">331 Users</p>
-                              </div>
-                            </div>
-                          </div>
-                        </div>
-                      </div>
-                    </div>
-                    <div class="col-md-6 stretch-card grid-margin">
-                      <div class="card  card-img-holder ">
-                        <div class="card-body mini-marg">
-                          <img src="\assets/images/faces/member-card.png" alt="image" />
-                          <h5 class="mt-3"><span class="fontbackg">TAG</span></h5>
-                          <h5>Membership name</h5>
+                          <!-- <h5 class="mt-3"><span class="fontbackg">TAG</span></h5> -->
+                          <h5 class="mt-3">Membership name</h5>
                           <div class="progress">
                             <div class="progress-bar bg-success" role="progressbar" style="width: 58%"
                               aria-valuenow="58" aria-valuemin="0" aria-valuemax="100"></div>
@@ -185,8 +130,8 @@
                       <div class="card  card-img-holder ">
                         <div class="card-body mini-marg">
                           <img src="\assets/images/faces/member-card.png" alt="image" />
-                          <h5 class="mt-3"><span class="fontbackg">TAG</span></h5>
-                          <h5>Membership name</h5>
+                          <!-- <h5 class="mt-3"><span class="fontbackg">TAG</span></h5> -->
+                          <h5 class="mt-3">Membership name</h5>
                           <div class="progress">
                             <div class="progress-bar bg-success" role="progressbar" style="width: 58%"
                               aria-valuenow="58" aria-valuemin="0" aria-valuemax="100"></div>
@@ -211,8 +156,63 @@
                       <div class="card  card-img-holder ">
                         <div class="card-body mini-marg">
                           <img src="\assets/images/faces/member-card.png" alt="image" />
-                          <h5 class="mt-3"><span class="fontbackg">TAG</span></h5>
-                          <h5>Membership name</h5>
+                          <!-- <h5 class="mt-3"><span class="fontbackg">TAG</span></h5> -->
+                          <h5 class="mt-3">Membership name</h5>
+                          <div class="progress">
+                            <div class="progress-bar bg-success" role="progressbar" style="width: 58%"
+                              aria-valuenow="58" aria-valuemin="0" aria-valuemax="100"></div>
+                          </div><br>
+                          <div class="description">
+                            <div class="row">
+                              <div class="col-md-4">
+                                <p class="txt2">5 Programs</p>
+                              </div>
+                              <div class="col-md-4">
+                                <p class="txt2">17 Workouts</p>
+                              </div>
+                              <div class="col-md-4">
+                                <p class="txt2">331 Users</p>
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+
+                  <div class="row">
+                    <div class="col-md-6 stretch-card grid-margin">
+                      <div class="card  card-img-holder ">
+                        <div class="card-body mini-marg">
+                          <img src="\assets/images/faces/member-card.png" alt="image" />
+                          <!-- <h5 class="mt-3"><span class="fontbackg">TAG</span></h5> -->
+                          <h5 class="mt-3">Membership name</h5>
+                          <div class="progress">
+                            <div class="progress-bar bg-success" role="progressbar" style="width: 58%"
+                              aria-valuenow="58" aria-valuemin="0" aria-valuemax="100"></div>
+                          </div><br>
+                          <div class="description">
+                            <div class="row">
+                              <div class="col-md-4">
+                                <p class="txt2">5 Programs</p>
+                              </div>
+                              <div class="col-md-4">
+                                <p class="txt2">17 Workouts</p>
+                              </div>
+                              <div class="col-md-4">
+                                <p class="txt2">331 Users</p>
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col-md-6 stretch-card grid-margin">
+                      <div class="card  card-img-holder ">
+                        <div class="card-body mini-marg">
+                          <img src="\assets/images/faces/member-card.png" alt="image" />
+                          <!-- <h5 class="mt-3"><span class="fontbackg">TAG</span></h5> -->
+                          <h5 class="mt-3">Membership name</h5>
                           <div class="progress">
                             <div class="progress-bar bg-success" role="progressbar" style="width: 58%"
                               aria-valuenow="58" aria-valuemin="0" aria-valuemax="100"></div>
@@ -248,55 +248,13 @@
                 <form class="forms-sample">
 
                   <div class="form-group">
-                    <input type="text" class="form-control inputfieldform" id="program" placeholder="Exercise Name">
+                    <input type="text" class="form-control inputfieldform" id="program" placeholder="Membership Name">
                   </div>
-                  <div class="form-group">
-                    <input type="text" class="form-control inputfieldform" id="exampleInputlName1"
-                      placeholder="Video Url">
-                  </div>
-                  <div class="form-group">
-                    <input type="text" class="form-control inputfieldform" id="desscription" placeholder="Description">
-                  </div>
-
-                  <!-- <div class="form-group">
-                        <input type="file" name="img[]" class="file-upload-default" id="fileInput">
-                        <div class="row">
-                            <div class="col-md-6">
-                                <div class="input-group">
-                                    <input type="text" class="form-control file-upload-info" disabled placeholder="Add Thumbnail" style="padding: 12px 20px !important; border: none;">
-                                </div>
-                            </div>
-                            <div class="col-md-6">
-                                <div class="input-group">
-                                    <button class="file-upload-browse btn1 btn-gradient-primary" type="button" onclick="$('#fileInput').click();">Browse</button>
-                                </div>
-                            </div>
-                        </div>
-                    </div>  -->
-                  <div class="form-group">
-                    <input type="file" name="img[]" class="file-upload-default" id="fileInput">
-                    <div class="input-group col-xs-12">
-                      <input type="text" class="form-control file-upload-info" disabled placeholder="Add Thumbnail"
-                        style="padding: 12px 30px !important; border-radius: 25px !important; border: none;">
-                      <span class="input-group-append">
-                        <button class="file-upload-browse btn1 btn-gradient-primary" type="button"
-                          onclick="$('#fileInput').click();">Browse</button>
-                      </span>
-                    </div>
-                  </div>
-                  <div class="form-group">
-                    <input type="text" class="form-control inputfieldform" id="program" placeholder="Exercise Name">
-                  </div>
-                  <div class="form-group">
-                    <input type="text" class="form-control inputfieldform" id="exampleInputlName1"
-                      placeholder="Video Url">
-                  </div>
-
 
                   <div class="form-group">
                     <input type="file" name="img[]" class="file-upload-default" id="fileInput">
                     <div class="input-group col-xs-12">
-                      <input type="text" class="form-control file-upload-info" disabled placeholder="Add Thumbnail"
+                      <input type="text" class="form-control file-upload-info" disabled placeholder="Thumbnail"
                         style="padding: 12px 30px !important; border-radius: 25px !important; border: none;">
                       <span class="input-group-append">
                         <button class="file-upload-browse btn1 btn-gradient-primary" type="button"
