--- a/pages/super-admin/add_memberships.html
+++ b/pages/super-admin/add_memberships.html
@@ -94,6 +94,9 @@
                               </div>
                             </div>
                           </div>
+                          <div class="ribbon">
+                            <a href="#" ><i class="mdi mdi-pencil"></i></a>
+                           </div>
                         </div>
                       </div>
                     </div>
@@ -120,61 +123,9 @@
                               </div>
                             </div>
                           </div>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-
-                  <div class="row">
-                    <div class="col-md-6 stretch-card grid-margin">
-                      <div class="card  card-img-holder ">
-                        <div class="card-body mini-marg">
-                          <img src="\assets/images/faces/member-card.png" alt="image" />
-                          <!-- <h5 class="mt-3"><span class="fontbackg">TAG</span></h5> -->
-                          <h5 class="mt-3">Membership name</h5>
-                          <div class="progress">
-                            <div class="progress-bar bg-success" role="progressbar" style="width: 58%"
-                              aria-valuenow="58" aria-valuemin="0" aria-valuemax="100"></div>
-                          </div><br>
-                          <div class="description">
-                            <div class="row">
-                              <div class="col-md-4">
-                                <p class="txt2">5 Programs</p>
-                              </div>
-                              <div class="col-md-4">
-                                <p class="txt2">17 Workouts</p>
-                              </div>
-                              <div class="col-md-4">
-                                <p class="txt2">331 Users</p>
-                              </div>
-                            </div>
-                          </div>
-                        </div>
-                      </div>
-                    </div>
-                    <div class="col-md-6 stretch-card grid-margin">
-                      <div class="card  card-img-holder ">
-                        <div class="card-body mini-marg">
-                          <img src="\assets/images/faces/member-card.png" alt="image" />
-                          <!-- <h5 class="mt-3"><span class="fontbackg">TAG</span></h5> -->
-                          <h5 class="mt-3">Membership name</h5>
-                          <div class="progress">
-                            <div class="progress-bar bg-success" role="progressbar" style="width: 58%"
-                              aria-valuenow="58" aria-valuemin="0" aria-valuemax="100"></div>
-                          </div><br>
-                          <div class="description">
-                            <div class="row">
-                              <div class="col-md-4">
-                                <p class="txt2">5 Programs</p>
-                              </div>
-                              <div class="col-md-4">
-                                <p class="txt2">17 Workouts</p>
-                              </div>
-                              <div class="col-md-4">
-                                <p class="txt2">331 Users</p>
-                              </div>
-                            </div>
-                          </div>
+                          <div class="ribbon">
+                            <a href="#" ><i class="mdi mdi-pencil"></i></a>
+                           </div>
                         </div>
                       </div>
                     </div>
@@ -204,6 +155,9 @@
                               </div>
                             </div>
                           </div>
+                          <div class="ribbon">
+                            <a href="#" ><i class="mdi mdi-pencil"></i></a>
+                           </div>
                         </div>
                       </div>
                     </div>
@@ -230,6 +184,70 @@
                               </div>
                             </div>
                           </div>
+                          <div class="ribbon">
+                            <a href="#" ><i class="mdi mdi-pencil"></i></a>
+                           </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+
+                  <div class="row">
+                    <div class="col-md-6 stretch-card grid-margin">
+                      <div class="card  card-img-holder ">
+                        <div class="card-body mini-marg">
+                          <img src="\assets/images/faces/member-card.png" alt="image" />
+                          <!-- <h5 class="mt-3"><span class="fontbackg">TAG</span></h5> -->
+                          <h5 class="mt-3">Membership name</h5>
+                          <div class="progress">
+                            <div class="progress-bar bg-success" role="progressbar" style="width: 58%"
+                              aria-valuenow="58" aria-valuemin="0" aria-valuemax="100"></div>
+                          </div><br>
+                          <div class="description">
+                            <div class="row">
+                              <div class="col-md-4">
+                                <p class="txt2">5 Programs</p>
+                              </div>
+                              <div class="col-md-4">
+                                <p class="txt2">17 Workouts</p>
+                              </div>
+                              <div class="col-md-4">
+                                <p class="txt2">331 Users</p>
+                              </div>
+                            </div>
+                          </div>
+                          <div class="ribbon">
+                            <a href="#" ><i class="mdi mdi-pencil"></i></a>
+                           </div>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col-md-6 stretch-card grid-margin">
+                      <div class="card  card-img-holder ">
+                        <div class="card-body mini-marg">
+                          <img src="\assets/images/faces/member-card.png" alt="image" />
+                          <!-- <h5 class="mt-3"><span class="fontbackg">TAG</span></h5> -->
+                          <h5 class="mt-3">Membership name</h5>
+                          <div class="progress">
+                            <div class="progress-bar bg-success" role="progressbar" style="width: 58%"
+                              aria-valuenow="58" aria-valuemin="0" aria-valuemax="100"></div>
+                          </div><br>
+                          <div class="description">
+                            <div class="row">
+                              <div class="col-md-4">
+                                <p class="txt2">5 Programs</p>
+                              </div>
+                              <div class="col-md-4">
+                                <p class="txt2">17 Workouts</p>
+                              </div>
+                              <div class="col-md-4">
+                                <p class="txt2">331 Users</p>
+                              </div>
+                            </div>
+                          </div>
+                          <div class="ribbon">
+                            <a href="#" ><i class="mdi mdi-pencil"></i></a>
+                           </div>
                         </div>
                       </div>
                     </div>
